--- a/src/main/java/de/konnekting/suite/SettingsDialog.form
+++ b/src/main/java/de/konnekting/suite/SettingsDialog.form
@@ -139,10 +139,18 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="changesApplyOnRestartLabel" pref="723" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="22" pref="22" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ipTunnelingPanel" max="32767" attributes="0"/>
+                                  <Component id="tpuartPanel" max="32767" attributes="0"/>
+                                  <Component id="ipRoutingPanel" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="offlinePanel" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="ipInterfaceRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="ipTunnelingRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="tpuartRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="individualAddressLabel" min="-2" max="-2" attributes="0"/>
@@ -150,18 +158,10 @@
                                       <Component id="individualAddressTextField" min="-2" pref="100" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="offlineRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="ipRouterRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="ipRoutingRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="ipRoutingAutodetectButton" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="22" pref="22" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="ipInterfacePanel" max="32767" attributes="0"/>
-                                  <Component id="tpuartPanel" max="32767" attributes="0"/>
-                                  <Component id="ipRouterPanel" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="offlinePanel" max="32767" attributes="0"/>
-                              </Group>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -176,25 +176,25 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="offlinePanel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="ipRouterRadioButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="ipRoutingRadioButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="ipRouterPanel" min="-2" max="-2" attributes="0"/>
+                      <Component id="ipRoutingPanel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="ipInterfaceRadioButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="ipTunnelingRadioButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="ipInterfacePanel" min="-2" max="-2" attributes="0"/>
+                      <Component id="ipTunnelingPanel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="tpuartRadioButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="tpuartPanel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="ipRoutingAutodetectButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="individualAddressLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="individualAddressTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
-                      <Component id="changesApplyOnRestartLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="31" max="32767" attributes="0"/>
+                      <EmptySpace pref="113" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -239,7 +239,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Container class="javax.swing.JPanel" name="ipRouterPanel">
+            <Container class="javax.swing.JPanel" name="ipRoutingPanel">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
@@ -255,14 +255,12 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="multicastipLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="ipRouterMulticasttextField" min="-2" pref="158" max="-2" attributes="0"/>
+                          <Component id="ipRoutingMulticasttextField" min="-2" pref="158" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="multicastNetworkOn" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="multicastNetworkCombobox" min="-2" pref="201" max="-2" attributes="0"/>
+                          <Component id="ipRoutingNetworkCombobox" pref="450" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="ipRoutingAutodetectButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -272,12 +270,11 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="multicastipLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="ipRouterMulticasttextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="multicastNetworkCombobox" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="ipRoutingMulticasttextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="ipRoutingNetworkCombobox" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="multicastNetworkOn" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="ipRoutingAutodetectButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="9" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -290,12 +287,12 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="ipRouterMulticasttextField">
+                <Component class="javax.swing.JTextField" name="ipRoutingMulticasttextField">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="224.0.23.12" noResource="true"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JComboBox" name="multicastNetworkCombobox">
+                <Component class="javax.swing.JComboBox" name="ipRoutingNetworkCombobox">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="4">
@@ -306,9 +303,6 @@
                       </StringArray>
                     </Property>
                   </Properties>
-                  <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="multicastNetworkComboboxActionPerformed"/>
-                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="multicastNetworkOn">
                   <Properties>
@@ -317,45 +311,35 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JButton" name="ipRoutingAutodetectButton">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                      <ResourceString bundle="de/konnekting/suite/i18n/language.properties" key="SettingsDialog.multicastNetworkDetectButton.text" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
-                    </Property>
-                  </Properties>
-                  <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ipRoutingAutodetectButtonActionPerformed"/>
-                  </Events>
-                </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JRadioButton" name="ipRouterRadioButton">
+            <Component class="javax.swing.JRadioButton" name="ipRoutingRadioButton">
               <Properties>
                 <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                   <ComponentRef name="buttonGroup1"/>
                 </Property>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                  <ResourceString bundle="de/konnekting/suite/i18n/language.properties" key="SettingsDialog.ipRouterRadioButton.text" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+                  <ResourceString bundle="de/konnekting/suite/i18n/language.properties" key="SettingsDialog.ipRoutingRadioButton.text" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ipRouterRadioButtonActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ipRoutingRadioButtonActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JRadioButton" name="ipInterfaceRadioButton">
+            <Component class="javax.swing.JRadioButton" name="ipTunnelingRadioButton">
               <Properties>
                 <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                   <ComponentRef name="buttonGroup1"/>
                 </Property>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                  <ResourceString bundle="de/konnekting/suite/i18n/language.properties" key="SettingsDialog.ipInterfaceRadioButton.text" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+                  <ResourceString bundle="de/konnekting/suite/i18n/language.properties" key="SettingsDialog.ipTunnelingRadioButton.text" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ipInterfaceRadioButtonActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ipTunnelingRadioButtonActionPerformed"/>
               </Events>
             </Component>
-            <Container class="javax.swing.JPanel" name="ipInterfacePanel">
+            <Container class="javax.swing.JPanel" name="ipTunnelingPanel">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
@@ -371,7 +355,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="ipAddressLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="ipInterfaceIpTextField" min="-2" pref="158" max="-2" attributes="0"/>
+                          <Component id="ipTunnelingIpTextField" min="-2" pref="158" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -382,7 +366,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="ipAddressLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="ipInterfaceIpTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="ipTunnelingIpTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
@@ -397,7 +381,7 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="ipInterfaceIpTextField">
+                <Component class="javax.swing.JTextField" name="ipTunnelingIpTextField">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="192.168.0.100" noResource="true"/>
                   </Properties>
@@ -478,14 +462,6 @@
                 <Property name="text" type="java.lang.String" value="1.0.255" noResource="true"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="changesApplyOnRestartLabel">
-              <Properties>
-                <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                  <ResourceString bundle="de/konnekting/suite/i18n/language.properties" key="SettingsDialog.changesApplyOnRestartLabel.text" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
-                </Property>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JRadioButton" name="offlineRadioButton">
               <Properties>
                 <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
@@ -498,6 +474,16 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="offlineRadioButtonActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="ipRoutingAutodetectButton">
+              <Properties>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                  <ResourceString bundle="de/konnekting/suite/i18n/language.properties" key="SettingsDialog.multicastNetworkDetectButton.text" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ipRoutingAutodetectButtonActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
