added ga lookup and autocomplete

--- a/src/main/java/de/konnekting/suite/GroupAddressInputDialog.form
+++ b/src/main/java/de/konnekting/suite/GroupAddressInputDialog.form
@@ -68,7 +68,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="groupAddressTextField1" max="32767" attributes="0"/>
+                  <Component id="groupAddressInput" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="openListButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="associateButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -81,7 +83,8 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="associateButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="groupAddressTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="groupAddressInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="openListButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -99,9 +102,19 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="associateButtonActionPerformed"/>
           </Events>
         </Component>
-        <Component class="de.konnekting.suite.uicomponents.GroupAddressTextField" name="groupAddressTextField1">
+        <Component class="de.konnekting.suite.uicomponents.GroupAddressTextField" name="groupAddressInput">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="groupAddressTextField1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="groupAddressInputActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="openListButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="de/konnekting/suite/i18n/language.properties" key="GroupAddressInputDialog.button.openList" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="openListButtonActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
@@ -163,6 +176,7 @@
                     <StringItem index="4" value="Item 5"/>
                   </StringArray>
                 </Property>
+                <Property name="selectionMode" type="int" value="0"/>
               </Properties>
             </Component>
           </SubComponents>
